fixed pdf on mobile

--- a/public/stylesheets/styl/pdf.styl
+++ b/public/stylesheets/styl/pdf.styl
@@ -2,3 +2,10 @@ object
 	width  100%
 	height 100vh 
 	flex 1 1 auto
+	
+
+@media (max-width:736px) {
+  object {
+    height 100%
+  }
+}
